# Bot-brain

./: week-1 report (1).docx
Bot_brain_/: web
Bot_brain_/bot brain project/: app.py  gemini_integration.py  pathfinding.py  pyproject.toml  web_app.py
Bot_brain_/bot brain project/navigation ai/: week - 2 report.docx
