[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "folium>=0.20.0",
    "google-genai>=1.39.0",
    "google-generativeai>=0.8.5",
    "networkx>=3.5",
    "osmnx>=2.0.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.2",
]
